use bootstrap alert class

--- a/module03-solution/found_items.html
+++ b/module03-solution/found_items.html
@@ -18,4 +18,4 @@
     </tr>
   </table>
 </div>
-<div id="nothingFound" ng-if="foundItems.length === 0">Nothing found.</div>
+<div id="nothingFound" class="alert alert-danger" ng-if="foundItems.length === 0">Nothing found.</div>
